fixed small screen navbar width issue, added close collapse nav on container click

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -117,6 +117,7 @@ a, .sort_by a, #bigDaddySearch, #see_favorites, .refresh, #add_favorite, .remove
   padding-top: 10px;
   font-family: 'Krona One', sans-serif;
   color: #c0d380 !important;
+  display: inline;
 }
 
 .devise {
@@ -181,6 +182,14 @@ a, .sort_by a, #bigDaddySearch, #see_favorites, .refresh, #add_favorite, .remove
 .devise img {
   margin: 2px 0px 0px 1px;
   float: right;
+}
+
+/*to organize nav collapse menu toggle & brand link for small*/
+.navbar-toggle {
+  z-index: 10000;
+}
+.container-fluid>.navbar-header {
+float: right;
 }
 
 /*-------------DEVISE FORMS--------*/
