--- a/app/assets/stylesheets/jquery.pageslide.css
+++ b/app/assets/stylesheets/jquery.pageslide.css
@@ -21,20 +21,4 @@
     background-color: rgba(0,0,0,1);
     overflow: scroll;
 }
-/*
-.open {
-    display: none;
-    float: left;
-    width: 40px;
-    height: 30px;
-    margin-right: 10px;
-    background: url(menu.png) center center no-repeat #333;
-    -moz-border-radius: 8px;
-    -webkit-border-radius: 8px;
-    -border-radius: 8px;
-    box-shadow: inset 0 0 3px #000;
-    text-indent: -999999px;
-    border: 0;
-}
-*/
 
